Fixed Spacing in For Students

--- a/style.css
+++ b/style.css
@@ -163,6 +163,7 @@ body {
 	}
 	.indented {
 		margin-left: 24px;
+		margin-top: 0px;
 	}
 	.smallmargin {
 	}
